# google_takeout

./: .gitignore  Makefile  README.md  pyproject.toml
google_takeout/: common_cli.py
google_takeout/stage/: cli.py  extract.py  load.py  run.py
google_takeout/stage/products/: __init__.py  base.py
google_takeout/stage/products/fit/: activities.py
google_takeout/tests/: test_placeholder.py
google_takeout/tests/stage/: test_cli.py  test_extract.py
google_takeout/tests/stage/products/: test_fit_activities.py
