[tool.poetry]
name = "google-takeout"
version = "0.0.1"
description = "Control & visualize google takeout data :bento:"
authors = ["Anna annalsmith14@gmail.com"]

[tool.poetry.dependencies]
python = "^3.6.5"
pandas = "^1.0.3"
matplotlib = "^3.2.1"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
