[tool.poetry]
name = "google_takeout"
version = "0.0.1"
description = "Control & visualize google takeout data :bento:"
authors = ["Anna"]

[tool.poetry.dependencies]
python = "^3.6.5"
bs4 = "^0.0.1"
click = "^7.1.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pylint = "^2.4.4"
black = "^19.10b0"
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
stage = "google_takeout.stage.cli:stage"